[package]
name = "tracker"
version = "0.1.4"
authors = ["ShenMian <sms_school@outlook.com>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
sgp4 = { git = "https://github.com/neuromorphicsystems/sgp4" }
reverse_geocoder = "4.1"
isocountry = "0.3"
arboard = "3.4"

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2"

# Utilities
anyhow = "1.0"
chrono = "0.4"
strum = { version = "0.26", features = ["derive"] }
dirs = "6.0"
serde_json = "1.0"

# Async
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
