[package]
name = "tracker"
version = "0.1.9"
authors = ["ShenMian <sms_school@outlook.com>"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
sgp4 = "2.3"
reverse_geocoder = "4.1"       # Convert latitude and longitude to country code
isocountry = "0.3"             # Convert country code to country name
arboard = "3.6"                # Access system clipboard
hifitime = { version = "4.1" }

# TUI
ratatui = "0.29"
crossterm = { version = "0.29", features = ["event-stream"] }
unicode-width = "0.2"

# Utilities
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1.0"

# Async
tokio = { version = "1.47", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
